# sync-player

./: Cargo.toml  README.md
crates/lobby/: Cargo.toml
crates/lobby/src/: api.rs  app.rs  domain.rs  infrastructure.rs  lib.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
