[package]
name = "main"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["tokio", "ws"] }
lobby = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true, features = ["log", "async-await"] }
tracing-subscriber = {workspace = true, features = ["json"]}
thiserror = {workspace = true}